--- a/elgarage/frontend/package.json
+++ b/elgarage/frontend/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@hookform/error-message": "0.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "jwt-decode": "^3.0.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
