--- a/elgarage/frontend/package.json
+++ b/elgarage/frontend/package.json
@@ -14,12 +14,14 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-calendar": "2.17.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-table": "^7.6.1",
+    "react-timeslot-calendar": "^0.2.0",
     "react-toastify": "^6.0.9"
   },
   "scripts": {
