--- a/elgarage/frontend/package.json
+++ b/elgarage/frontend/package.json
@@ -17,6 +17,7 @@
     "react-calendar": "2.17.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.5",
+    "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-table": "^7.6.1",
