--- a/elgarage/backend/package.json
+++ b/elgarage/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.5",
     "request": "^2.88.2"
   }
